--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <div>
+        <img src="https://cdn.dribbble.com/users/150828/screenshots/2873686/todo_app_icon.jpg" alt="Todo-app-logo" style="width:50px; height:50px"/>
+    </div>
     <div id="container">
         <h1>Todo App</h1>
         <div id="input-wrapper">
