--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <button id="clearBtn">Clear All</button>
         </div>
     </div>
+    <h3>my name is suman</h3>
     <script src="./index.js"></script>
 </body>
 </html>
