--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div>
-        <img src="https://cdn.dribbble.com/users/150828/screenshots/2873686/todo_app_icon.jpg" alt="Todo-app-logo" style="width:50px; height:50px"/>
+    <div class="logo">
+        <img src="https://www.sketchappsources.com/resources/source-image/sketch-3-todo-list-app-icon-template.png" alt="logo" />
     </div>
     <div id="container">
         <h1>Todo App</h1>
