--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo-App</title>
+    <title>Todo-Application</title>
     <script src="https://kit.fontawesome.com/651b793911.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./index.css">
 </head>
@@ -16,7 +16,7 @@
         <h1>Todo App</h1>
         <div id="input-wrapper">
             <input type="text" id="input-text" placeholder="Add your new todo"/>
-            <button id="addBtn">Add</button>
+            <button id="addBtn">submit</button>
         </div>
         <div id="todo-items-wrapper">
         <!--     <div class="todo-item">
